--- a/PVLI/index.html
+++ b/PVLI/index.html
@@ -6,6 +6,9 @@
 	<script type="text/javascript" src="js/phaser.min.js"></script>
 	<script type="text/javascript" src="js/boot.js"></script>
 	<script type="text/javascript" src="js/load.js"></script>
+	<script type="text/javascript" src="js/menu.js"></script>
+	<script type="text/javascript" src="js/play.js"></script>
+	<script type="text/javascript" src="js/mario.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
     <style type="text/css">
         body {
