--- a/PVLI/index.html
+++ b/PVLI/index.html
@@ -9,6 +9,8 @@
 	<script type="text/javascript" src="js/menu.js"></script>
 	<script type="text/javascript" src="js/play.js"></script>
 	<script type="text/javascript" src="js/mario.js"></script>
+	<script type="text/javascript" src="js/ganar.js"></script>
+	<script type="text/javascript" src="js/perder.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
     <style type="text/css">
         body {
