--- a/PVLI/index.html
+++ b/PVLI/index.html
@@ -9,6 +9,7 @@
 	<script type="text/javascript" src="js/menu.js"></script>
 	<script type="text/javascript" src="js/play.js"></script>
 	<script type="text/javascript" src="js/mario.js"></script>
+	<script type="text/javascript" src="js/Escaleras.js"></script>
 	<script type="text/javascript" src="js/ganar.js"></script>
 	<script type="text/javascript" src="js/perder.js"></script>
 	<script type="text/javascript" src="js/game.js"></script>
