--- a/PVLI/index.html
+++ b/PVLI/index.html
@@ -1,22 +1,39 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
-	<meta charset="UTF-8" />
-	<title>Phaser - DonkeyKong</title>
-	<script type="text/javascript" src="js/phaser.min.js"></script>
-	<script type="text/javascript" src="js/boot.js"></script>
-	<script type="text/javascript" src="js/load.js"></script>
-	<script type="text/javascript" src="js/menu.js"></script>
-	<script type="text/javascript" src="js/play.js"></script>
-	<script type="text/javascript" src="js/mario.js"></script>
-	<script type="text/javascript" src="js/ganar.js"></script>
-	<script type="text/javascript" src="js/perder.js"></script>
-	<script type="text/javascript" src="js/game.js"></script>
-    <style type="text/css">
-        body {
-            margin: 0;
-            padding: 0;
-        }
-    </style>
+  <title>Donkey Kong</title>
+  <meta charset="utf-8">
+
+  <link href="styles.css" rel="stylesheet" type="text/css">
+  <style>
+  #game {
+    width: 800px;
+    height: 600px;
+  }
+  </style>
+  	<script type="text/javascript" src="js/phaser.min.js"></script>
+    <script type="text/javascript" src="js/boot.js"></script>
+    <script type="text/javascript" src="js/load.js"></script>
+    <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="js/play.js"></script>
+    <script type="text/javascript" src="js/mario.js"></script>
+    <script type="text/javascript" src="js/ganar.js"></script>
+    <script type="text/javascript" src="js/perder.js"></script>
+    <script type="text/javascript" src="js/game.js"></script>
 </head>
+
+<body>
+  <header>
+    <a href="https://www.github.com/gituser/awesome-game">
+      <img style="position: absolute; top: 0; right: 0; border: 0;"
+        src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
+        alt="Fork me on GitHub">
+    </a>
+  </header>
+
+  <footer>
+    <p><strong>Donkey Kong</strong><br>
+      by <a href="http://github.com/Gonzsa04">Gonzsa04</a></p>
+  </footer>
+</body>
 </html>
