Prueba para el hito 2

--- a/PVLI/src/index.html
+++ b/PVLI/src/index.html
@@ -16,9 +16,11 @@
     <script type="text/javascript" src="js/load.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/play.js"></script>
+    <script type="text/javascript" src="js/GameObject.js"></script>
     <script type="text/javascript" src="js/mario.js"></script>
     <script type="text/javascript" src="js/ganar.js"></script>
     <script type="text/javascript" src="js/perder.js"></script>
+    <script type="text/javascript" src="js/Barriles.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
 </head>
 
