menu a medio hacer

--- a/PVLI/src/index.html
+++ b/PVLI/src/index.html
@@ -14,6 +14,7 @@
   	<script type="text/javascript" src="js/phaser.min.js"></script>
     <script type="text/javascript" src="js/boot.js"></script>
     <script type="text/javascript" src="js/load.js"></script>
+    <script type="text/javascript" src="js/boton.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
     <script type="text/javascript" src="js/play.js"></script>
     <script type="text/javascript" src="js/GameObject.js"></script>
