--- a/PVLI/src/index.html
+++ b/PVLI/src/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="js/load.js"></script>
     <script type="text/javascript" src="js/boton.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="js/howHigh.js"></script>
     <script type="text/javascript" src="js/play.js"></script>
     <script type="text/javascript" src="js/GameObject.js"></script>
     <script type="text/javascript" src="js/mario.js"></script>
