--- a/PVLI/src/index.html
+++ b/PVLI/src/index.html
@@ -24,6 +24,7 @@
     <script type="text/javascript" src="js/ganar.js"></script>
     <script type="text/javascript" src="js/perder.js"></script>
     <script type="text/javascript" src="js/Barriles.js"></script>
+    <script type="text/javascript" src="js/Flama.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
 </head>
 
