--- a/PVLI/src/index.html
+++ b/PVLI/src/index.html
@@ -14,13 +14,17 @@
   	<script type="text/javascript" src="js/phaser.min.js"></script>
     <script type="text/javascript" src="js/boot.js"></script>
     <script type="text/javascript" src="js/load.js"></script>
+    <script type="text/javascript" src="js/boton.js"></script>
     <script type="text/javascript" src="js/menu.js"></script>
+    <script type="text/javascript" src="js/controles.js"></script>
+    <script type="text/javascript" src="js/howHigh.js"></script>
     <script type="text/javascript" src="js/play.js"></script>
     <script type="text/javascript" src="js/GameObject.js"></script>
     <script type="text/javascript" src="js/mario.js"></script>
     <script type="text/javascript" src="js/ganar.js"></script>
     <script type="text/javascript" src="js/perder.js"></script>
     <script type="text/javascript" src="js/Barriles.js"></script>
+    <script type="text/javascript" src="js/Flama.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
 </head>
 
