--- a/PVLI/src/index.html
+++ b/PVLI/src/index.html
@@ -19,6 +19,8 @@
     <script type="text/javascript" src="js/controles.js"></script>
     <script type="text/javascript" src="js/howHigh.js"></script>
     <script type="text/javascript" src="js/play.js"></script>
+    <script type="text/javascript" src="js/play2.js"></script>
+    <script type="text/javascript" src="js/play3.js"></script>
     <script type="text/javascript" src="js/GameObject.js"></script>
     <script type="text/javascript" src="js/mario.js"></script>
     <script type="text/javascript" src="js/ganar.js"></script>
