Añadida pagina web y solucionados algunos bugs

--- a/PVLI/src/index.html
+++ b/PVLI/src/index.html
@@ -5,12 +5,7 @@
   <meta charset="utf-8">
 
   <link href="styles.css" rel="stylesheet" type="text/css">
-  <style>
-  #game {
-    width: 800px;
-    height: 600px;
-  }
-  </style>
+  
   	<script type="text/javascript" src="js/phaser.min.js"></script>
     <script type="text/javascript" src="js/boot.js"></script>
     <script type="text/javascript" src="js/load.js"></script>
@@ -30,19 +25,44 @@
     <script type="text/javascript" src="js/Flama.js"></script>
     <script type="text/javascript" src="js/game.js"></script>
 </head>
-
-<body>
-  <header>
-    <a href="https://www.github.com/gituser/awesome-game">
+    <header>
+    <a href="https://www.github.com/gonzsa04/DonkeyKong">
       <img style="position: absolute; top: 0; right: 0; border: 0;"
         src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"
         alt="Fork me on GitHub">
-    </a>
-  </header>
+      </a>
+     </header>
 
-  <footer>
-    <p><strong>Donkey Kong</strong><br>
-      by <a href="http://github.com/Gonzsa04">Gonzsa04</a></p>
-  </footer>
+    <footer>
+      <div class="padre">
+        <div class="juego" id="gameDiv" > </div>
+
+        <br><br>
+
+        <p style= "margin: auto; width: 70%; padding: 0px;">
+          Donkey Kong es un juego de máquina recreativa creado por Nintendo en el año 1981. 
+          Es un juego del género plataformas que se centra en controlar al personaje sobre una serie de plataformas mientras evita obstáculos.
+          El juego consiste en que Mario debe rescatar a una dama que había sido capturada por un enorme mono llamado Donkey Kong.
+
+          ¡Utiliza las flechas para manejarte por el menu y el espacio para seleccionar!
+        </p>
+
+        <p class="github" style= "margin: auto; width: 70%; padding: 0px;">
+          <br>
+          by <a href="http://github.com/gonzsa04">Gonzalo Sanz Lastra y Jorge Rodríguez García</a><br>
+          Published under the <a href="http://creativecommons.org/licenses/by-nc-sa/4.0/">Creative Commons Attribution-NonCommercial-ShareAlike</a>
+          license.</p>
+          <br><br><br><br><br><br><br><br><br><br><br><br><br>
+
+        <p style= "margin: auto; width: 70%; padding: 0px;">
+        Este proyecto ha sido realizado como practica en la universidad. ¡No queremos ganar dinero! <br> Estos somos nosotros:
+        </p>
+
+        <br><br>
+
+        <img class="abajo"src="images/Jorge.png" alt = "Jorge Rodríguez, Creador"/>   Jorge Rodríguez
+        <img class="abajo"src="images/Gonzalo.png" alt="Gonzalo Sanz, creador">   Gonzalo Sanz
+      </div>
+      </footer>
 </body>
 </html>
